--- a/git_hub_pages_searchable_filterable_500_record_directory_static_no_backend.html
+++ b/git_hub_pages_searchable_filterable_500_record_directory_static_no_backend.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Public Directory</title>
+  <title>Paul Stein Notes Directory</title>
   <style>
     :root{--bg:#0b0c10;--panel:#111319;--muted:#9aa0a6;--text:#e6e6e6;--accent:#4dabf7;--chip:#1b1f2a;--border:#2a2f3a}
     html,body{height:100%}
