replace name of csv

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script>
     // Load CSV from repo (make sure it's in your repo root or /data folder)
-    Papa.parse("paulsteinnotes.csv", {
+    Papa.parse("paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function(results) {
