--- a/index.html
+++ b/index.html
@@ -26,10 +26,25 @@
   <!-- Filter dropdowns -->
   <div class="filters">
     <label for="yearFilter">Year: </label>
+    <select id="yearFilter"><option value="">A</option></select>
+    <select id="yearFilter"><option value="">B</option></select>
+    <select id="yearFilter"><option value="">C</option></select>
     <select id="yearFilter"><option value="">All</option></select>
 
     <label for="seasonFilter">Season: </label>
-    <select id="seasonFilter"><option value="">All</option></select>
+    <select id="seasonFilter"><option value="">Advent</option></select>
+    <select id="seasonFilter"><option value="">Christmas</option></select>
+    <select id="seasonFilter"><option value="">Epiphany</option></select>
+    <select id="seasonFilter"><option value="">Lent</option></select>
+    <select id="seasonFilter"><option value="">Easter</option></select>
+    <select id="seasonFilter"><option value="">Pentacost</option></select>
+
+    <label for="seasonFilter">Content Type: </label>
+    <select id="seasonFilter"><option value="">Gospel</option></select>
+    <select id="seasonFilter"><option value="">Reflection</option></select>
+    <select id="seasonFilter"><option value="">Commentary</option></select>
+    <select id="seasonFilter"><option value="">Reflection</option></select>
+
   </div>
 
   <!-- DataTable -->
