--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <table id="recordsTable" class="display"></table>
 
   <script>
-    Papa.parse("paul-stein-notes.csv", {
+    Papa.parse("paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function(results) {
