--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         filterColumns.forEach(colName => {
           const uniqueVals = [...new Set(data.map(row => row[colName]).filter(v => v))].sort();
 
-          // Create dropdown
-          const select = $(`<select id="${colName}Filter"><option value="">${colName}</option></select>`);
+          // Create dropdown  // I removed "all" from the <option value="all" then replaced it with "$"
+          const select = $(`<select id="${colName}Filter"><option value="$">${colName}</option></select>`);
           uniqueVals.forEach(val => select.append(`<option value="${val}">${val}</option>`));
 
           // Add to filters div
