--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </main>
 
   <script>
-    Papa.parse("paul-stein-conten1.csv", {
+    Papa.parse("paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function(results) {
