--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
       height: 100vh;
     }
 
+    /* Sidebar */
     aside {
       background: #f7f7f7;
       padding: 20px;
       border-right: 1px solid #ccc;
       overflow-y: auto;
+      transition: transform 0.3s ease;
+    }
+
+    aside.collapsed {
+      transform: translateX(-100%);
     }
 
     main {
@@ -32,7 +38,7 @@
 
     .filter-group { margin-bottom: 20px; }
     label { display: block; margin-bottom: 5px; font-weight: 600; }
-    select { width: 100%; padding: 5px; margin-bottom: 10px; }
+    select, input[type="text"] { width: 100%; padding: 5px; margin-bottom: 10px; }
 
     #breadcrumbs {
       font-size: 0.9em;
@@ -68,12 +74,34 @@
       line-height: 1.5;
     }
 
-    .record:last-child {
-      border-bottom: none;
+    .record:last-child { border-bottom: none; }
+
+    /* Mobile hamburger */
+    #toggleSidebar {
+      display: none;
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      background: #0066cc;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      z-index: 1000;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    @media (max-width: 768px) {
+      body { grid-template-columns: 1fr; }
+      aside { position: fixed; top: 0; left: 0; bottom: 0; width: 240px; z-index: 999; }
+      #toggleSidebar { display: block; }
     }
   </style>
 </head>
 <body>
+
+  <button id="toggleSidebar">☰ Filters</button>
+
   <aside>
     <h2>Filter</h2>
     <div id="filterContainer"></div>
@@ -82,16 +110,21 @@
   <main>
     <h1>Paul Stein Notes</h1>
     <div id="breadcrumbs">Home</div>
+    <input type="text" id="keywordSearch" placeholder="Search Title and Content..." />
     <div id="recordsContainer"></div>
   </main>
 
   <script>
+    const toggleBtn = document.getElementById("toggleSidebar");
+    const sidebar = document.querySelector("aside");
+    toggleBtn.addEventListener("click", () => sidebar.classList.toggle("collapsed"));
+
     Papa.parse("paul-stein-content1.csv", {
       download: true,
       header: true,
       complete: function(results) {
         const data = results.data.filter(row => row.Title && row.Content);
-        const filterColumns = ["Year", "Season", "Week", "Author", "Title", "Content Type", "Content"]; // adjust to match your CSV headers
+        const filterColumns = ["Year", "Season", "Type"]; // use your actual CSV headers
         const filters = {};
 
         // Build sidebar filters
@@ -101,7 +134,7 @@
           group.classList.add("filter-group");
 
           const label = document.createElement("label");
-          label.textContent = colName.charAt(0).toUpperCase() + colName.slice(1);
+          label.textContent = colName;
 
           const select = document.createElement("select");
           select.id = colName + "Filter";
@@ -126,8 +159,8 @@
         });
 
         const recordsContainer = document.getElementById("recordsContainer");
+        const keywordInput = document.getElementById("keywordSearch");
 
-        // Display records as stacked cards
         function renderRecords(filteredData) {
           recordsContainer.innerHTML = "";
           if (!filteredData.length) {
@@ -152,45 +185,64 @@
           });
         }
 
-        // Breadcrumb logic
-        function updateBreadcrumbs() {
+        function updateBreadcrumbs(filteredData) {
           const crumbs = [];
           crumbs.push(`<span data-type="home">Home</span>`);
           filterColumns.forEach(col => {
             const val = filters[col].value;
             if (val) crumbs.push(`<span data-type="filter" data-col="${col}">${col}: ${val}</span>`);
           });
+          if (keywordInput.value.trim()) {
+            crumbs.push(`<span data-type="keyword">Search: "${keywordInput.value.trim()}"</span>`);
+          }
           document.getElementById("breadcrumbs").innerHTML = crumbs.join(" › ");
         }
 
         function applyFilters() {
           let filtered = [...data];
+
+          // Apply dropdown filters first
           filterColumns.forEach(col => {
             const val = filters[col].value;
             if (val) filtered = filtered.filter(r => r[col] === val);
           });
+
+          // Then keyword search
+          const keyword = keywordInput.value.trim().toLowerCase();
+          if (keyword) {
+            filtered = filtered.filter(r =>
+              r.Title.toLowerCase().includes(keyword) ||
+              r.Content.toLowerCase().includes(keyword)
+            );
+          }
+
           renderRecords(filtered);
-          updateBreadcrumbs();
+          updateBreadcrumbs(filtered);
         }
 
-        // Add listeners
+        // Event listeners
         Object.values(filters).forEach(select => select.addEventListener("change", applyFilters));
+        keywordInput.addEventListener("input", applyFilters);
 
-        // Breadcrumb clicks
         document.getElementById("breadcrumbs").addEventListener("click", e => {
           const type = e.target.dataset.type;
+          if (!type) return;
+
           if (type === "home") {
             Object.values(filters).forEach(s => (s.value = ""));
+            keywordInput.value = "";
           } else if (type === "filter") {
             const col = e.target.dataset.col;
             filters[col].value = "";
+          } else if (type === "keyword") {
+            keywordInput.value = "";
           }
           applyFilters();
         });
 
-        // Initialize
+        // Initial render
         renderRecords(data);
-        updateBreadcrumbs();
+        updateBreadcrumbs(data);
       }
     });
   </script>
